objects/Copado_Tip__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <defaultValue>&quot;the Copado team&quot;</defaultValue>
        <inlineHelpText>to be displayed on the Tip to be credited to the author.</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegEx__c</fullName>
        <description>Regular expression to match the error</description>
        <inlineHelpText>Java regular expression.
Use http://www.regexplanet.com/advanced/java/index.html to validate it.</inlineHelpText>
        <label>RegEx</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <inlineHelpText>Message to be displayed to the users.</inlineHelpText>
        <label>Tip</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Copado Tip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>RegEx__c</columns>
        <columns>Tip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Copado Tip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Tips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>